Pages now uses display grid, fix sidebar collapse

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,21 +1,20 @@
 .App {
-  display: flex;
-  flex-flow: row wrap;
+  display: grid;
+  grid-template-rows: 15% auto;
+  grid-template-columns: auto auto;
+  grid-template-areas: "hd hd" "sb ms";
+  width: 100%;
+  height: 100%;
 }
 
-.App > * {
-  flex: 1 100%;
+.header {
+  grid-area: hd;
 }
 
-header {
-  padding: 10px;
-  background-color: tomato;
-}
-
-.SideBarContainer {
-  flex: 1;
+.SideBar {
+  grid-area: sb;
 }
 
 .mainSection {
-  flex: 3;
+  grid-area: ms;
 }
