--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 7%;
+    /* height: 7%; */
     padding: 5px 5px;
     text-align: center;
     border-bottom: 0.5em solid #890815;
